--- a/.github/workflows/cd-dfa-portal-public-api.yml
+++ b/.github/workflows/cd-dfa-portal-public-api.yml
@@ -1,18 +1,20 @@
-#CD pipeline for dfa ui public
-name: cd-dfae-project-public-ui
+# GitHub Actions pipeline for DFA API Public Portal component
+name: cd-dfa-portal-public-api
 
 on:
   push:
     branches:
-      - 'develop'
+      - support-develop
+      - develop
     paths:
-      - "dfa-public/src/UI/**"
-      - ".github/workflows/cd-dfae-project-public-ui.yml"
+      - "dfa-public/src/API/**"
+      - ".github/workflows/cd-dfa-portal-public-api.yml"
 
   workflow_dispatch:
+
 env:
-  IMAGE_NAME: dfa-portal-ui-public
-  WORKING_DIRECTORY: ./dfa-public/src/UI
+  IMAGE_NAME: dfa-portal-api-public
+  WORKING_DIRECTORY: ./dfa-public/src/API
   IMAGE_TAG: dev
 
 jobs:
@@ -70,11 +72,11 @@ jobs:
           # Update the Helm values file with the new image tag and version
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
-          sed -i  "s/uipubtag: .*/uipubtag: dev # Image Updated on $DATETIME/" ../deploy/dev_public_values.yaml
-          sed -i  "s/uipubversion: .*/uipubversion: v-${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/dev_public_values.yaml
+          sed -i  "s/apipubtag: .*/apipubtag: dev # Image Updated on $DATETIME/" ../deploy/dev_public_values.yaml
+          sed -i  "s/apipubversion: .*/apipubversion: v-${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/dev_public_values.yaml
 
-          sed -i  "s/uipubtag: .*/uipubtag: dev # Image Updated on $DATETIME/"  dfa-portal-ui-public/values.yaml
-          sed -i  "s/uipubversion: .*/uipubversion: v-${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/"  dfa-portal-ui-public/values.yaml
+          sed -i  "s/apipubtag: .*/apipubtag: dev # Image Updated on $DATETIME/"  dfa-portal-api-public/values.yaml
+          sed -i  "s/apipubversion: .*/apipubversion: v-${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/"  dfa-portal-api-public/values.yaml
 
           # Commit and push the changes
           git config --global user.email "actions@github.com"
@@ -94,5 +96,5 @@ jobs:
 
           git add .
 
-          git commit -m "Update Dev UI image tag"
+          git commit -m "Update Dev API image tag"
           git push origin develop  # Update the branch name as needed
