--- a/dfa-public/src/API/EMBC.DFA.PUBLIC.API/Properties/launchSettings.json
+++ b/dfa-public/src/API/EMBC.DFA.PUBLIC.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       },
       "distributionName": ""
     },
-    "EMBC.DFA.API": {
+    "EMBC.DFA.PUBLIC.API": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
