--- a/dfa-public/src/API/EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj
+++ b/dfa-public/src/API/EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj
@@ -23,13 +23,17 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
+        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.12.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="System.Text.Json" Version="9.0.0" />
     </ItemGroup>
