--- a/dfa-public/src/API/EMBC.DFA.PUBLIC.API/EMBC.DFA.PUBLIC.API.csproj
+++ b/dfa-public/src/API/EMBC.DFA.PUBLIC.API/EMBC.DFA.PUBLIC.API.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <Nullable>annotations</Nullable>
         <Company>Province of British Columbia</Company>
         <Authors>Quartech Systems Limited</Authors>
-        <Copyright>Copyright 2020 Province of British Columbia</Copyright>
+        <Copyright>Copyright Province of British Columbia</Copyright>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
-        <RepositoryUrl>https://github.com/bcgov/embc-ess-mod</RepositoryUrl>
+        <RepositoryUrl>https://github.com/bcgov/emcr-dfa-portal</RepositoryUrl>
         <RepositoryType>GIT</RepositoryType>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <UserSecretsId>78326412-d09d-4d67-964c-b4b680228566</UserSecretsId>
+        <UserSecretsId>78326412-d09d-4d67-964c-b4b680228567</UserSecretsId>
         <AnalysisMode>Default</AnalysisMode>
         <EnableDotNetAnalyzers>True</EnableDotNetAnalyzers>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
@@ -38,16 +38,10 @@
 
     <ItemGroup>
         <PackageReference Include="IdentityModel.AspNetCore.OAuth2Introspection" Version="6.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.*" />
-        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+
         <PackageReference Include="NSwag.AspNetCore" Version="14.0.7" />
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+
         <PackageReference Include="System.ServiceModel.Http" Version="6.0.0" />
         <PackageReference Include="System.ServiceModel.Security" Version="4.6.0" />
         <PackageReference Include="Xrm.Tools.CRMWebAPI" Version="1.0.25" />
