use docker image version 18

--- a/dfa-public/src/UI/Dockerfile
+++ b/dfa-public/src/UI/Dockerfile
@@ -1,4 +1,4 @@
-FROM trion/ng-cli-karma AS node-builder
+FROM trion/ng-cli-karma:18 AS node-builder
 WORKDIR /src
 COPY ./embc-dfa/package*.json ./
 RUN npm install --ignore-scripts --legacy-peer-deps
