--- a/dfa-public/src/UI/Dockerfile
+++ b/dfa-public/src/UI/Dockerfile
@@ -1,7 +1,7 @@
-FROM trion/ng-cli-karma:18.0.1 AS node-builder
+FROM trion/ng-cli-karma:18.2.11 AS node-builder
 WORKDIR /src
 COPY ./embc-dfa/package*.json ./
-RUN npm install --ignore-scripts --legacy-peer-deps
+RUN npm install --ignore-scripts 
 COPY ./embc-dfa/ .
 
 FROM node-builder as ng-builder
