--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -47,11 +47,11 @@
     "@angular-devkit/build-angular": "~18.1.2",
     "@angular-devkit/core": "^18.1.2",
     "@angular-devkit/schematics": "^18.1.2",
-    "@angular-eslint/builder": "~18.1.0",
-    "@angular-eslint/eslint-plugin": "~18.1.0",
-    "@angular-eslint/eslint-plugin-template": "~18.1.0",
-    "@angular-eslint/schematics": "~18.1.0",
-    "@angular-eslint/template-parser": "~18.1.0",
+    "@angular-eslint/builder": "18.1.0",
+    "@angular-eslint/eslint-plugin": "18.1.0",
+    "@angular-eslint/eslint-plugin-template": "18.1.0",
+    "@angular-eslint/schematics": "18.1.0",
+    "@angular-eslint/template-parser": "18.1.0",
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "~18.1.2",
     "@progress/kendo-angular-buttons": "^16.5.0",
@@ -59,10 +59,10 @@
     "@progress/kendo-svg-icons": "^3.0.0",
     "@types/jasmine": "~3.10.2",
     "@types/node": "^12.20.5",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "@typescript-eslint/utils": "^7.17.0",
-    "eslint": "^8.57.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jsdoc": "~39.3.0",
