DEVOPS-357: Consolidate and Refactor DFA GitHub Actions workflows (#765)
* Consolidate private portal workflows, rename existing build image workflows

* Consolidate public portal workflows, rename existing build image workflows

* Remove deprecated public portal image promotion workflows

* Remove deprecated private portal image promotion workflows

* Migrate PDF microservice image promotion workflows from OpenShift, rename existing build image workflow

* Remove deprecated workflows that are no longer in use

* Refactor Private Portal workflows to reflect best standards of building images in GitHub

* Create README to document workflows

* Rename files and workflows to follow existing conventions and for convenience

* Refactor workflows to match naming conventions, remove image tag backup step except for production image promotion

* Revert "Remove deprecated workflows that are no longer in use"

This reverts commit ca349238cf2bd273d4dadc665aa67e1da8b5d700.

* Update README to reflect new workflow names, files

* Reduce rows to reflect condensed nature of workflows (i.e. API and UI being in same workflow)

--- a/.github/workflows/cd-pdf-service.yaml
+++ b/.github/workflows/cd-pdf-service.yaml
@@ -1,5 +1,5 @@
-# GitHub Actions pipeline for DFA PDF microservice component
-name: cd-dfa-pdf-service
+# GitHub Actions pipeline for DFA PDF microservice
+name: Build PDF Service
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       - develop
     paths:
       - "pdf-service/**"
-      - ".github/workflows/cd-dfa-pdf-service.yml"
+      - ".github/workflows/cd-pdf-service.yaml"
   
   workflow_dispatch:
 
