--- a/.github/workflows/promote-public-portal-training.yaml
+++ b/.github/workflows/promote-public-portal-training.yaml
@@ -1,37 +1,49 @@
-name: cd-dfa-private-portal-ui-training
+name: Promote Public Portal to Training
 
 on:
+  push:
+    paths:
+      - ".github/workflows/promote-public-portal-training.yaml"
+
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: dfa-portal-ui
+  IMAGE_API_NAME: dfa-portal-api-public
+  IMAGE_UI_NAME: dfa-portal-ui-public
   IMAGE_REGISTRY: ${{ secrets.OCP4_REGISTRY }}/${{ secrets.OCP4_NAMESPACE }}
   IMAGE_CURRENT_ENV_TAG: test
   IMAGE_PROMOTE_ENV_TAG: training
   IMAGE_PROMOTE_ENV_BACKUP_TAG: training-backup
 
 jobs:
-  backup-dfa-private-portal-ui:
+  promote-dfa-public-portal-api:
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'bcgov'
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Promote dfa-portal-api-public to training
+        uses: tinact/docker.image-retag@master
+        with:
+          image_name: ${{ env.IMAGE_API_NAME }}
+          image_old_tag: ${{ env.IMAGE_CURRENT_ENV_TAG }}
+          image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+          registry_username: ${{ secrets.OCP4_USERNAME }}
+          registry_password: ${{ secrets.OCP4_PASSWORD }}      
+
+  promote-dfa-public-portal-ui:
     runs-on: ubuntu-latest
     if: github.repository_owner == 'bcgov'
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Retag existing training dfa-portal-ui image to training-backup
+      - name: Promote dfa-portal-ui-public to training
         uses: tinact/docker.image-retag@master
         with:
-          image_name: ${{ env.IMAGE_NAME }}
-          image_old_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
-          image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_BACKUP_TAG }}
-          registry: ${{ env.IMAGE_REGISTRY }}
-          registry_username: ${{ secrets.OCP4_USERNAME }}
-          registry_password: ${{ secrets.OCP4_PASSWORD }}
-      
-      - name: Promote dfa-portal-ui to training
-        uses: tinact/docker.image-retag@master
-        with:
-          image_name: ${{ env.IMAGE_NAME }}
+          image_name: ${{ env.IMAGE_UI_NAME }}
           image_old_tag: ${{ env.IMAGE_CURRENT_ENV_TAG }}
           image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
           registry: ${{ env.IMAGE_REGISTRY }}
