--- a/.github/workflows/promote-pdf-service-prod.yaml
+++ b/.github/workflows/promote-pdf-service-prod.yaml
@@ -1,37 +1,40 @@
-name: cd-dfa-private-portal-api-training
+name: Promote PDF Service to Production
 
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - ".github/workflows/promote-pdf-service-prod.yaml"
 
 env:
-  IMAGE_NAME: dfa-portal-api
+  IMAGE_PDF_NAME: dfa-portal-pdf-service
   IMAGE_REGISTRY: ${{ secrets.OCP4_REGISTRY }}/${{ secrets.OCP4_NAMESPACE }}
-  IMAGE_CURRENT_ENV_TAG: test
-  IMAGE_PROMOTE_ENV_TAG: training
-  IMAGE_PROMOTE_ENV_BACKUP_TAG: training-backup
+  IMAGE_CURRENT_ENV_TAG: training
+  IMAGE_PROMOTE_ENV_TAG: prod
+  IMAGE_PROMOTE_ENV_BACKUP_TAG: prod-backup
 
 jobs:
-  backup-dfa-private-portal-api:
+  promote-pdf-service:
     runs-on: ubuntu-latest
     if: github.repository_owner == 'bcgov'
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Promote existing training dfa-portal-api image to training-backup
+      - name: Retag existing prod dfa-portal-pdf-service image to prod-backup
         uses: tinact/docker.image-retag@master
         with:
-          image_name: ${{ env.IMAGE_NAME }}
+          image_name: ${{ env.IMAGE_API_NAME }}
           image_old_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
           image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_BACKUP_TAG }}
           registry: ${{ env.IMAGE_REGISTRY }}
           registry_username: ${{ secrets.OCP4_USERNAME }}
           registry_password: ${{ secrets.OCP4_PASSWORD }}
 
-      - name: Promote dfa-portal-api to training
+      - name: Promote dfa-portal-pdf-service to prod
         uses: tinact/docker.image-retag@master
         with:
-          image_name: ${{ env.IMAGE_NAME }}
+          image_name: ${{ env.IMAGE_API_NAME }}
           image_old_tag: ${{ env.IMAGE_CURRENT_ENV_TAG }}
           image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
           registry: ${{ env.IMAGE_REGISTRY }}
