--- a/.github/workflows/promote-private-portal-training.yaml
+++ b/.github/workflows/promote-private-portal-training.yaml
@@ -1,37 +1,48 @@
-name: cd-dfa-private-portal-api-test
+name: Promote Private Portal to Training
 
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - ".github/workflows/promote-private-portal-training.yaml"
 
 env:
-  IMAGE_NAME: dfa-portal-api
+  IMAGE_API_NAME: dfa-portal-api
+  IMAGE_UI_NAME: dfa-portal-ui
   IMAGE_REGISTRY: ${{ secrets.OCP4_REGISTRY }}/${{ secrets.OCP4_NAMESPACE }}
-  IMAGE_CURRENT_ENV_TAG: dev
-  IMAGE_PROMOTE_ENV_TAG: test
-  IMAGE_PROMOTE_ENV_BACKUP_TAG: test-backup
+  IMAGE_CURRENT_ENV_TAG: test
+  IMAGE_PROMOTE_ENV_TAG: training
+  IMAGE_PROMOTE_ENV_BACKUP_TAG: training-backup
 
 jobs:
-  backup-dfa-private-portal-api:
+  promote-dfa-private-portal-api:
     runs-on: ubuntu-latest
     if: github.repository_owner == 'bcgov'
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Promote existing test dfa-portal-api image to test-backup
+      - name: Promote dfa-portal-api to training
         uses: tinact/docker.image-retag@master
         with:
-          image_name: ${{ env.IMAGE_NAME }}
-          image_old_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
-          image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_BACKUP_TAG }}
+          image_name: ${{ env.IMAGE_API_NAME }}
+          image_old_tag: ${{ env.IMAGE_CURRENT_ENV_TAG }}
+          image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
           registry: ${{ env.IMAGE_REGISTRY }}
           registry_username: ${{ secrets.OCP4_USERNAME }}
           registry_password: ${{ secrets.OCP4_PASSWORD }}
 
-      - name: Promote dfa-portal-api to test
+  promote-dfa-private-portal-ui:
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'bcgov'
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Promote dfa-portal-ui to training
         uses: tinact/docker.image-retag@master
         with:
-          image_name: ${{ env.IMAGE_NAME }}
+          image_name: ${{ env.IMAGE_UI_NAME }}
           image_old_tag: ${{ env.IMAGE_CURRENT_ENV_TAG }}
           image_new_tag: ${{ env.IMAGE_PROMOTE_ENV_TAG }}
           registry: ${{ env.IMAGE_REGISTRY }}
