--- a/.github/workflows/cd-pdf-service.yaml
+++ b/.github/workflows/cd-pdf-service.yaml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - support-develop
-      - develop
     paths:
       - "pdf-service/**"
       - ".github/workflows/cd-pdf-service.yaml"
@@ -13,8 +12,9 @@ on:
   workflow_dispatch:
 
 env:
+  DOCKER_CONTEXT_DIRECTORY: ./pdf-service
   IMAGE_NAME: dfa-portal-pdf-service
-  WORKING_DIRECTORY: ./pdf-service
+  IMAGE_REGISTRY: ${{ secrets.OCP4_REGISTRY }}/${{ secrets.OCP4_NAMESPACE }}
   IMAGE_TAG: dev
 
 jobs:
@@ -24,13 +24,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+    
+      - name: Set up Docker Buildx tooling
+        uses: docker/setup-buildx-action@v3
 
       - name: Log into registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.DOCKER_SUPPORT_REGISTRY }}
-          username: ${{ secrets.DOCKER_SUPPORT_USERNAME }}
-          password: ${{ secrets.DOCKER_SUPPORT_BUILDER }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ secrets.OCP4_USERNAME }}
+          password: ${{ secrets.OCP4_PASSWORD }}
 
       # Get SHORT_SHA to tag images
       - name: Get short SHA
@@ -39,15 +42,12 @@ jobs:
           echo "::set-output name=SHORT_SHA::$(git rev-parse --short HEAD)"
           echo "Short SHA: $SHORT_SHA"
 
-      - name: Build Image
-        working-directory: ${{env.WORKING_DIRECTORY}}
-        run: |
-          docker build -t ${{env.IMAGE_NAME}} .
-
-      - name: Tag Image
-        run: |
-          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_SUPPORT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ env.IMAGE_TAG }}
-
-      - name: Docker Push
-        run: |
-          docker push ${{ secrets.DOCKER_SUPPORT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ env.IMAGE_TAG }}
+      - name: Build and push dfa-portal-pdf-service
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: |
+            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
+          context: ${{ env.DOCKER_CONTEXT_DIRECTORY }}
+          push: true
+          tags: |
+            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
