--- a/dfa-public/src/API/EMBC.Utilities/EMBC.Utilities.csproj
+++ b/dfa-public/src/API/EMBC.Utilities/EMBC.Utilities.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
         <PackageReference Include="AWSSDK.S3" Version="3.5.10.2" />
+        <PackageReference Include="AWSSDK.Core" Version="3.5.3.9" />
         <PackageReference Include="Handlebars.Net" Version="2.1.2" />
         <PackageReference Include="MailKit" Version="3.4.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.*" />
