--- a/landing-page/Caddyfile
+++ b/landing-page/Caddyfile
@@ -28,11 +28,8 @@
 	encode zstd gzip
 
 	handle {
-		try_files {path} {path}/ /index.html?{query}
+		try_files {path} {path}/ /dist/landing-page/index.html?{query}
 		file_server
 	}
 }
 
-:2016 {
-	respond / 200
-}
