--- a/landing-page/Dockerfile
+++ b/landing-page/Dockerfile
@@ -17,4 +17,4 @@ RUN chmod +rw /config/caddy
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
 COPY Caddyfile /etc/caddy/Caddyfile
 COPY --from=ng-builder /app/dist/ /site
-EXPOSE 2015 
+EXPOSE 2015 2016
